fixed spacing between stats and features

--- a/styles/base/_utilities.scss
+++ b/styles/base/_utilities.scss
@@ -25,6 +25,10 @@
     margin-bottom: 9.6rem;
   }
 
+  &-margin-bottom-200 {
+    margin-bottom: 20rem;
+  }
+
   &-margin-top-20 {
     margin-top: 2rem;
   }
